Created naviigation component and moved navigation bar and header there

--- a/neutrackClientApp/src/app/app.component.html
+++ b/neutrackClientApp/src/app/app.component.html
@@ -1,54 +1,1 @@
-<mat-toolbar class="mat-elevation-z8">
-  <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
-      <mat-icon *ngIf="!sidenav.opened">
-          menu
-      </mat-icon>
-      <mat-icon *ngIf="sidenav.opened">
-          close
-      </mat-icon>
-  </button>
-  NeuTrack
-</mat-toolbar>
-  
-  <mat-sidenav-container>
-
-    <!-- <mat-sidenav mode="side" opened class="mat-elevation-z8"> -->
-    <mat-sidenav #sidenav="matSidenav" mode="over" class="mat-elevation-z8">
-        <img class="avatar mat-elevation-z8" src="https://jobdescriptionswiki.com/wp-content/uploads/2016/08/nutritionist.jpg" />
-
-        <h4 class="name">John Smith</h4>
-        <p class="designation">Nutritionist</p>
-        <mat-divider></mat-divider>
-
-        <button mat-button class="menu-button">
-            <mat-icon>home</mat-icon>
-            <span>Dashbord</span>
-        </button>
-        <button mat-button class="menu-button">
-            <mat-icon>Calculator</mat-icon>
-            <span>Calculator</span>
-        </button>
-        <button mat-button class="menu-button">
-            <mat-icon>people</mat-icon>
-            <span>Patients</span>
-        </button>
-
-        <mat-divider></mat-divider>
-
-        <button mat-button class="menu-button">
-            <mat-icon>person</mat-icon>
-            <span>My account</span>
-        </button>
-    </mat-sidenav>
-
-
-      <mat-sidenav-content>
-          <div class="content mat-elevation-z8">
-              <h1>Why you need a NeuTrack</h1>
-              <br>
-              <p>The vision for NeuTrack is to empower every person to take 
-                control of their ideal weight goals and provide a platform 
-                for nutritionists to better manage their clients.</p>
-          </div>
-      </mat-sidenav-content>
-  </mat-sidenav-container>
+<app-navigation></app-navigation>
