--- a/neutrackClientApp/src/app/header/header.component.html
+++ b/neutrackClientApp/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<mat-toolbar class="mat-elevation-z8">
+    <!-- <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
+        <mat-icon *ngIf="!sidenav.opened">
+            menu
+        </mat-icon>
+        <mat-icon *ngIf="sidenav.opened">
+            close
+        </mat-icon>
+    </button> -->
+    NeuTrack
+</mat-toolbar>
+
+<app-navigation></app-navigation>
